--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
+    "@prisma/client": "^6.17.1",
+    "aos": "^2.3.4",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "@prisma/client": "^6.17.1"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
