--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.33.3",
     "@prisma/client": "^6.17.1",
     "aos": "^2.3.4",
+    "emoji-picker-react": "^4.14.1",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
